--- a/Portfolio_HannahPark/css/Portfolio_hannah_2.css
+++ b/Portfolio_HannahPark/css/Portfolio_hannah_2.css
@@ -70,7 +70,7 @@ body {
 #group_bars_text {
   color: #fff;
   font-family: 'Oswald', sans-serif;
-  font-size: 60px
+  font-size: 70px
   position: relative;
   text-align: center;
 }
@@ -118,13 +118,15 @@ p {
 }
 
 #content2 {
-  height: 500px;
+  height: 1200px;
+  position: relative;
   background-color: #fff;
   display: none;
 }
 
 #content3 {
-  height: 500px;
+  height: 5800px;
+  position: relative;
   background-color: #fff;
   display: none;
 }
@@ -152,4 +154,10 @@ p {
   font-family: 'Oswald', sans-serif;
   position: relative;
   text-align: right;
+}
+
+#result {
+  position: relative;
+  top: 10%;
+  display: block;
 }
