--- a/Practise/css/style_5.css
+++ b/Practise/css/style_5.css
@@ -66,9 +66,9 @@ tr {
 }
 
 th, td {
-  font-family: 'Lato', sans-serif;
-  font-weight: 400;
-  padding: 20px;
+  font-family: 'Lato', serif;
+  font-weight: 300;
+  padding: 22px;
   text-align: left;
   width: 33.3333%;
 }
